IndicesPermission compilation